RESOLVED FIXED210520
REGRESSION (r259898): Tabs occasionally go blank and get stuck that way
https://bugs.webkit.org/show_bug.cgi?id=210520
Summary REGRESSION (r259898): Tabs occasionally go blank and get stuck that way
Tim Horton
Reported 2020-04-14 16:02:56 PDT
REGRESSION (r259898): Tabs occasionally go blank and get stuck that way
Attachments
Patch (2.03 KB, patch)
2020-04-14 16:04 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2020-04-14 16:04:39 PDT
EWS
Comment 2 2020-04-14 16:53:32 PDT
Committed r260104: <https://trac.webkit.org/changeset/260104> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396470 [details].
Radar WebKit Bug Importer
Comment 3 2020-04-14 16:54:18 PDT
Chris Dumez
Comment 4 2020-04-15 08:28:44 PDT
Thanks for the fix.
Note You need to log in before you can comment on or make changes to this bug.